[bumpversion]
current_version = 2.1.0

[metadata]
name = base58
author = David Keijser
author_email = keijser@gmail.com
version = 2.1.0
description = Base58 and Base58Check implementation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keis/base58
license = MIT
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3

[options]
packages = base58
zip_safe = False
python_requires = >=3.5

[options.entry_points]
console_scripts =
	base58 = base58.__main__:main

[options.package_data]
base58 = py.typed

[options.extras_require]
tests =
    mypy
	PyHamcrest>=2.0.2
	pytest>=4.6
	pytest-benchmark
	pytest-cov
	pytest-flake8

[bumpversion:file:setup.cfg]

[bumpversion:file:base58/__init__.py]

[mypy]
warn_unreachable = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
check_untyped_defs = True
incremental = False

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True

